--- a/public/index.html
+++ b/public/index.html
@@ -4,21 +4,13 @@
         <meta charset="utf-8" />
         <link rel="icon" href="%PUBLIC_URL%/img/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta
-            name="description"
-            content="I am a front end web developer passionate about the ever-increasing possibilities of modern software engineering."
-        />
+        <meta name="description" content="I am a front end web developer passionate about the ever-increasing possibilities of modern software engineering." />
+        <title>Ole Urfels | Front End Web Developer</title>
 
         <!-- Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Roboto:wght@100;300;400;500;700;900&family=Source+Code+Pro:wght@200;300;400;500;600;700;900&display=swap"
-            rel="stylesheet"
-            crossorigin="anonymous"
-        />
-
-        <title>Ole Urfels | Front End Web Developer</title>
+        <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Roboto:wght@100;300;400;500;700;900&family=Source+Code+Pro:wght@200;300;400;500;600;700;900&display=swap" rel="stylesheet" crossorigin="anonymous" />
     </head>
     <body id="top" class="bg-primary-dark font-segoeUI text-white text-lg pt-[68px]">
         <noscript>You need to enable JavaScript to run this website.</noscript>
