--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,14 @@
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Roboto:wght@100;300;400;500;700;900&family=Source+Code+Pro:wght@200;300;400;500;600;700;900&display=swap" rel="stylesheet" crossorigin="anonymous" />
+
     </head>
+
     <body id="top" class="bg-primary-dark font-segoeUI text-white text-lg pt-[68px]">
         <noscript>You need to enable JavaScript to run this website.</noscript>
         <div id="root"></div>
+        
+        <!-- Scripts -->
+        <script defer src="./customJS.js"></script>
     </body>
 </html>
